Seed database with games

--- a/src/components/oneSelectionStyles.css
+++ b/src/components/oneSelectionStyles.css
@@ -1,6 +1,6 @@
 .single-selection {
   display: grid;
-  grid-template-columns: 200px 200px;
+  grid-template-columns: 1fr 1fr;
   grid-template-areas: 
   "selection result";
 }
